revert back to single build.gradle for migration to agp 9.0