@@ -1,34 +1,323 @@
-import com.posse.tanksrandomizer.conventionplugins.base.extensions.androidApplication
-import com.posse.tanksrandomizer.conventionplugins.project.extensions.composeDesktopApplication
-import com.posse.tanksrandomizer.conventionplugins.project.extensions.iosRegularFramework
+import com.android.build.gradle.internal.dsl.BaseAppModuleExtension
+import com.codingfeline.buildkonfig.compiler.FieldSpec.Type.STRING
+import org.gradle.internal.extensions.stdlib.capitalized
+import org.jetbrains.compose.desktop.application.dsl.TargetFormat
+import org.jetbrains.kotlin.gradle.dsl.KotlinMultiplatformExtension
+import java.util.Properties
 
 plugins {
-    id("kmp.compose.application.plugin")
-    id("kmp.coroutines.plugin")
-    id("kmp.serialization.plugin")
-    id("kmp.coil.plugin")
-    id("kmp.ktor.plugin")
-    id("kmp.multiplatformSettings.plugin")
-    id("kmp.datetime.plugin")
-    id("kmp.kodein.plugin")
-    id("kmp.room.plugin")
-    id("kmp.buildKonfig.plugin")
+    alias(libs.plugins.multiplatform)
+    alias(libs.plugins.compose.compiler)
+    alias(libs.plugins.compose)
+    alias(libs.plugins.android.application)
+    alias(libs.plugins.kotlinx.serialization)
+    alias(libs.plugins.buildkonfig)
+    alias(libs.plugins.androidx.room)
+    alias(libs.plugins.ksp)
+    alias(libs.plugins.google.gms.google.services)
+    alias(libs.plugins.google.firebase.crashlytics)
 }
 
-androidApplication {
-    namespace = "com.posse.tanksrandomizer"
+kotlin {
+    configureTargets()
+    configureOptions()
+    configureDependencies()
+}
 
-    defaultConfig {
-        applicationId = "com.posse.tanksrandomizer"
+configureRoom()
+
+android {
+    configureAndroidAppVersion()
+    configureAndroidOptions()
+    configureAndroidAppSigning()
+    configureAndroidAppBuildTypes()
+    configureAndroidAppArtifactNames()
+}
+
+private fun KotlinMultiplatformExtension.configureDependencies() {
+    sourceSets {
+        commonMain.dependencies {
+            implementation(libs.compose.foundation)
+            implementation(libs.compose.material3)
+            implementation(libs.jetbrains.navigation3.ui)
+            implementation(libs.compose.components.resources)
+            implementation(libs.compose.material.icons.extended)
+            implementation(libs.compose.window.size.clazz)
+            implementation(libs.kotlinx.coroutines.core)
+            implementation(libs.androidx.lifecycle.viewmodel.navigation3)
+            implementation(libs.compose.androidx.lifecycle.runtime)
+            implementation(libs.kotlinx.serialization.json)
+            implementation(libs.kotlinx.datetime)
+            implementation(libs.multiplatformSettings.noArgs)
+            implementation(libs.multiplatformSettings)
+            implementation(libs.multiplatformSettings.serialization)
+            implementation(libs.multiplatformSettings.coroutines)
+            implementation(libs.multiplatformSettings.makeObservable)
+            implementation(libs.kodein)
+            implementation(libs.kodein.compose)
+            implementation(libs.compose.haze)
+            implementation(libs.compose.haze.materials)
+            implementation(libs.ktor.core)
+            implementation(libs.ktor.client.cio)
+            implementation(libs.ktor.client.content.negotiation)
+            implementation(libs.ktor.serialization.kotlinx.json)
+            implementation(libs.ktor.client.logging)
+            implementation(libs.coil.compose)
+            implementation(libs.coil.network.ktor)
+            implementation(libs.compose.localina)
+            implementation(libs.androidx.sqlite.bundled)
+            implementation(libs.androidx.room.runtime)
+            api(libs.compose.webview.multiplatform) // use api since the desktop app need to access the Cef to initialize it.
+        }
+
+        androidMain.dependencies {
+            implementation(libs.androidx.activityCompose)
+            implementation(libs.kotlinx.coroutines.android)
+            implementation(libs.androidx.splashscreen)
+            implementation(libs.android.material.theme)
+            implementation(libs.androidx.lifecycle.service)
+            implementation(libs.androidx.material3)
+            implementation(libs.firebase.crashlytics)
+        }
+
+        jvmMain.dependencies {
+            implementation(compose.desktop.currentOs)
+            implementation(libs.kotlinx.coroutines.swing)
+        }
     }
 }
 
-iosRegularFramework {
-    baseName = "ComposeApp"
-    isStatic = true
+private fun BaseAppModuleExtension.configureAndroidAppVersion() {
+    namespace = "com.posse.tanksrandomizer"
+    compileSdk = 36
+
+    defaultConfig {
+        minSdk = 23
+        targetSdk = 36
+
+        applicationId = "com.posse.tanksrandomizer"
+        versionCode = 12
+        versionName = "2.1.0"
+
+        testInstrumentationRunner = "androidx.test.runner.AndroidJUnitRunner"
+    }
 }
 
-composeDesktopApplication(
-    mainClass = "MainKt",
-    packageName = "Random Tank Generator",
-)
+private fun KotlinMultiplatformExtension.configureTargets() {
+    androidTarget()
+
+    jvm()
+
+    listOf(
+        iosX64(),
+        iosArm64(),
+        iosSimulatorArm64()
+    ).forEach {
+        it.binaries.framework {
+            baseName = "ComposeApp"
+            isStatic = true
+        }
+    }
+}
+
+private fun KotlinMultiplatformExtension.configureOptions() {
+    jvmToolchain(17)
+
+    compilerOptions {
+        freeCompilerArgs.addAll(
+            listOf(
+                "-Xno-call-assertions",
+                "-Xno-receiver-assertions",
+                "-Xno-param-assertions",
+                "-Xexpect-actual-classes",
+            )
+        )
+    }
+}
+
+private fun BaseAppModuleExtension.configureAndroidAppBuildTypes() {
+    buildTypes {
+        release {
+            signingConfig = signingConfigs.getByName("release")
+
+            isMinifyEnabled = true
+            isShrinkResources = true
+
+            ndk {
+                debugSymbolLevel = "FULL"
+            }
+
+            proguardFiles(
+                getDefaultProguardFile("proguard-android-optimize.txt"),
+                "proguard-rules.pro"
+            )
+        }
+
+        debug {
+            signingConfig = signingConfigs.getByName("release")
+            versionNameSuffix = "-debug"
+//            applicationIdSuffix = ".debug"
+        }
+    }
+}
+
+private fun BaseAppModuleExtension.configureAndroidOptions() {
+    buildFeatures {
+        buildConfig = true
+    }
+
+    bundle {
+        @Suppress("SpellCheckingInspection", "UnstableApiUsage")
+        // Отключить динамическую доставку ресурсов по локалям
+        language.enableSplit = false
+        @Suppress("UnstableApiUsage")
+        density.enableSplit = true
+        @Suppress("UnstableApiUsage")
+        abi.enableSplit = true
+    }
+
+    androidResources {
+        @Suppress("UnstableApiUsage")
+        localeFilters += listOf("en", "ru")
+    }
+
+    packaging {
+        resources {
+            excludes += "/META-INF/{AL2.0,LGPL2.1}"
+            excludes += "/kotlin/**"
+            excludes += "/META-INF/androidx.*.version"
+            excludes += "/META-INF/com.google.*.version"
+            excludes += "/META-INF/kotlinx_*.version"
+            excludes += "/kotlin-tooling-metadata.json"
+            excludes += "/DebugProbesKt.bin"
+            excludes += "/META-INF/com/android/build/gradle/app-metadata.properties"
+            excludes += "/*.properties"
+            excludes += "/*.proto"
+            excludes += "/junit/**"
+            excludes += "/LICENSE-junit.txt"
+        }
+    }
+}
+
+private fun BaseAppModuleExtension.configureAndroidAppSigning() {
+    signingConfigs {
+        create("release") {
+            val properties = Properties().apply {
+                load(File(projectDir, "signingKey.properties").reader())
+            }
+
+            storeFile = File(properties.getProperty("path_to_store_file"))
+            storePassword = properties.getProperty("store_password")
+            keyAlias = properties.getProperty("key_alias")
+            keyPassword = properties.getProperty("key_password")
+        }
+    }
+}
+
+compose.desktop {
+    application {
+        mainClass = "MainKt"
+
+        nativeDistributions {
+            targetFormats(TargetFormat.Dmg, TargetFormat.Msi, TargetFormat.Deb)
+            packageName = "Random Tank Generator"
+            packageVersion = "2.0.0"
+
+            linux {
+                iconFile.set(project.file("desktopAppIcons/LinuxIcon.png"))
+            }
+            windows {
+                iconFile.set(project.file("desktopAppIcons/WindowsIcon.ico"))
+            }
+            macOS {
+                iconFile.set(project.file("desktopAppIcons/MacosIcon.icns"))
+                bundleID = "com.posse.tanksrandomizer"
+            }
+        }
+
+        buildTypes.release.proguard {
+            obfuscate.set(true)
+            optimize.set(false)
+            configurationFiles.from(
+                project.file("proguard-rules.pro"),
+                project.file("compose-desktop.pro"),
+            )
+        }
+    }
+}
+
+private fun Project.configureRoom() {
+    room {
+        schemaDirectory("$projectDir/schemas")
+    }
+
+    dependencies {
+        add("kspAndroid", libs.androidx.room.compiler)
+        add("kspIosSimulatorArm64", libs.androidx.room.compiler)
+        add("kspIosX64", libs.androidx.room.compiler)
+        add("kspIosArm64", libs.androidx.room.compiler)
+        add("kspJvm", libs.androidx.room.compiler)
+    }
+}
+
+afterEvaluate {
+    tasks.withType<JavaExec> {
+        jvmArgs("--add-opens", "java.desktop/sun.awt=ALL-UNNAMED")
+        jvmArgs("--add-opens", "java.desktop/java.awt.peer=ALL-UNNAMED")
+
+        if (System.getProperty("os.name").contains("Mac")) {
+            jvmArgs("--add-opens", "java.desktop/sun.awt=ALL-UNNAMED")
+            jvmArgs("--add-opens", "java.desktop/sun.lwawt=ALL-UNNAMED")
+            jvmArgs("--add-opens", "java.desktop/sun.lwawt.macosx=ALL-UNNAMED")
+        }
+    }
+}
+
+buildkonfig {
+    packageName = "com.posse.tanksrandomizer.common.data.di"
+    exposeObjectWithName = "ServerConstants"
+
+    val properties = Properties().apply {
+        load(File(projectDir, "serverConstants.properties").reader())
+    }
+
+    defaultConfigs {
+        buildConfigField(STRING, "APPLICATION_ID", properties.getProperty("appication_id"))
+    }
+}
+
+private fun BaseAppModuleExtension.configureAndroidAppArtifactNames() {
+    applicationVariants.all {
+        outputs.forEach { output ->
+            val bundleFinalizeTaskName = StringBuilder("sign").run {
+                productFlavors.forEach {
+                    append(it.name.capitalized())
+                }
+                append(buildType.name.capitalized())
+                append("Bundle")
+                toString()
+            }
+
+            val outputName = buildString {
+                append("app-")
+                productFlavors.forEach {
+                    append(it.name)
+                    append("-")
+                }
+                append("v$versionName")
+            }
+
+            tasks.named(
+                bundleFinalizeTaskName,
+                com.android.build.gradle.internal.tasks.FinalizeBundleTask::class.java
+            ) {
+                val file = finalBundleFile.asFile.get()
+                val finalFile = File(file.parentFile, "$outputName.aab")
+                finalBundleFile.set(finalFile)
+            }
+            if (output is com.android.build.gradle.internal.api.BaseVariantOutputImpl) {
+                output.outputFileName = "$outputName.${output.outputFile.extension}"
+            }
+        }
+    }
+}
